--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <base href="/">
     <link rel="stylesheet" type="text/css" href="./styles/App.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
